# paperclip

./: PUBLISH-GUIDE.md  pnpm-lock.yaml  pnpm-workspace.yaml
apps/desktop/: .gitignore  README.md  package.json
apps/desktop/scripts/: build-sidecar.sh
apps/desktop/src/: index.html  main.ts
apps/desktop/src-tauri/: Cargo.toml  Entitlements.plist  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
cli/: esbuild.config.mjs  package.json
cli/src/: index.ts
paperclip_working_folder/products/: distribution-strategy.md
scripts/: build-npm.sh  install.sh
server/src/: app.ts  index.ts  ui-branding.ts
server/src/__tests__/: ui-branding.test.ts
server/src/routes/: health.ts  index.ts  templates.ts
server/src/services/: company-template-service.ts  index.ts
server/src/templates/: company-templates.ts
ui/src/: App.tsx  vite-env.d.ts
ui/src/api/: templates.ts
ui/src/components/: CompanyRail.tsx  OnboardingWizard.tsx
ui/src/lib/: branding.ts
ui/src/pages/: Auth.tsx  Dashboard.tsx
